syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/imhasandl/notification-service/protos";

service NotificationService {
   rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse) {}
}
 
message SendNotificationRequest {
   bytes notification = 1;
}

message SendNotificationResponse {
   string username = 1;
   string receiver_id = 2;
   string content = 3; 
   google.protobuf.Timestamp sent_at = 4;
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative notification.proto